test_regress/t/t_func_bad2.out
%Error: t/t_func_bad2.v:7: Unsupported: Recursive function or task call
%Error: Exiting due to
